# captcha-gemma3

./: .gitignore  pyproject.toml
src/: attn.py  config.py  eval_captcha.py  evaluate.py  model.py  train.py  train_captcha.py  util.py
src/data/: generator.py
