[project]
name = "gemma3-lo"
version = "0.1.0"
description = "Gemma 3 Impl"
requires-python = ">=3.12"
dependencies = [
    # PyTorch
    "torch",
    "torchvision",
    # ROCm PyTorch Dependency
    "pytorch-triton-rocm; sys_platform=='linux'",

    # Normal Deps
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "captcha>=0.7.1",
]

# Linux
[tool.uv.sources]
torch = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true
